<resources>
    <string name="app_name">MyKnot Gaming</string>
    <string name="login">Login</string>
    <string name="tv_login_link_to_signup">Not a member?\n Create an account</string>
    <string name="username">Username</string>
    <string name="create_account">Create Account</string>
    <string name="email">Email</string>
    <string name="password">Password</string>
    <string name="or">\n OR \n</string>
    <string name="solo">SOLO</string>
    <string name="duo">DUO</string>
    <string name="squad">SQUAD</string>
    <string name="fill_detail">Fill the required Details</string>
    <string name="confirm_pay">Proceed to Payment</string>
    <string name="leader_in_game_name">Leader In-game Name</string>
    <string name="_2_in_game_name">#2 In-game Name</string>
    <string name="_4_in_game_name">#4 In-game Name</string>
    <string name="_3in_game_name">#3 In-game Name</string>
    <string name="team_name">Team Name</string>
    <string name="squad_details">Welcome to PUBG Squads \n\n Please fill the necessary details</string>
    <string name="duo_details">Welcome to PUBG Duo \n\n Please fill the necessary details</string>
    <string name="solo_details">Welcome to PUBG Solo \n\n Please fill the necessary details</string>

    <!--Google SignIn -->
    <string name="disconnect">Disconnect</string>
    <string name="sign_out">Sign Out</string>
    <string name="signed_in_fmt">Signed in as: %s</string>
    <string name="signed_out">Signed out</string>
    <string name="refresh_token">Get Fresh Token</string>
    <string name="server_client_id">YOUR_SERVER_CLIENT_ID</string>
    <string name="signed_in">Signed in</string>
    <string name="id_token_fmt">ID Token: %s</string>

    <string name="store_name" translatable="false">My Online Store</string>
    <string name="googlepay_status_unavailable" translatable="false">Unfortunately, Google Pay is not available on this phone.</string>
    <string name="googlepay_status_checking" translatable="false">Checking if Google Pay is available...</string>
    <string name="payments_show_name" translatable="false">Successfully received payment data for %s!</string>
    <string name="select_a_slot">Select a slot:</string>

    <string name="company_logo">Company Logo</string>
    <string name="title_activity_admin_add_match">AdminAddMatch</string>
    <!-- Strings used for fragments for navigation -->
    <string name="first_fragment_label">First Fragment</string>
    <string name="second_fragment_label">Second Fragment</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>

    <string name="match_type">Match Type</string>
    <string name="player_joined">Player Joined</string>
    <string name="player_remaining">Player Remaining</string>
    <string name="entry_fee">Entry Fee</string>
    <string name="money_break_up">Money Break Up</string>
    <string name="winnings">Winnings</string>
    <string name="time">Time</string>
    <string name="date">Date</string>
    <string name="mode">Mode</string>
    <string name="map">Map</string>
    <string name="are_you_sure">Do you want to delete this match ?</string>
    <string name="no">NO</string>
    <string name="yes">YES</string>
    <string name="room_id">Room Id</string>
    <string name="enter_custom_room_password">Enter Custom Room Password</string>
    <string name="enter_custom_room_id">Enter Custom Room Id</string>
    <string name="room_password">Room Password</string>
    <string name="fcm_token">FCM Token: %s</string>
    <string name="title_activity_main3">Main3Activity</string>
    <string name="title_home">Home</string>
    <string name="title_dashboard">Dashboard</string>
    <string name="title_notifications">Notifications</string>
    <string name="profile">Profile</string>
    <string name="title_activity_main5">Main5Activity</string>

    <string name="hello_first_fragment">Hello first fragment</string>
    <string name="hello_second_fragment">Hello second fragment. Arg: %1$s</string>
    <string name="home_fragment_text"><![CDATA[MyKnot Gaming brings you the most awaited custom gaming experience with 100% true Battle Royale Matches.\nJoin us right now and drop into a match to test your skills & earn rewards.]]></string>
    <string name="tv_home_sharing">Join us on other platforms and stay updated</string>
    <string name="organiser_logo">Organiser Logo</string>
    <string name="pubg">PUBG</string>
    <string name="cod">COD</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="tab_text_1">UpComing</string>
    <string name="tab_text_2">Completed</string>

    <!--FCM-->
    <string name="quickstart_message">Click the SUBSCRIBE TO WEATHER button below to subscribe to the
        weather topic. Messages sent to the weather topic will be received. The LOG TOKEN button logs the
        InstanceID token to logcat.</string>
    <string name="subscribe_to_weather">Subscribe To Weather</string>
    <string name="log_token">Log Token</string>

    <string name="msg_subscribed">Subscribed to weather topic</string>
    <string name="msg_token_fmt" translatable="false">InstanceID Token: %s</string>

    <string name="default_notification_channel_id" translatable="false">fcm_default_channel</string>
    <!--
        This is the name that users will see when interacting with this channel.
        It should describe the category of notifications that will be sent through this channel
     -->
    <!-- [START fcm_default_icon_string] -->
    <string name="default_notification_channel_name" translatable="true">Weather</string>
    <!-- [END fcm_default_icon_string] -->
    <string name="msg_subscribe_failed">Failed to subscribe to weather topic</string>
    <string name="fcm_message">FCM Message</string>
    <string name="recent_notifications">Recent Notifications</string>
    <string name="no_new_notifications">- No New Notifications -</string>
    <string name="msg_welcome">Welcome message</string>
    <string name="admin_id">Admin-Id</string>
    <string name="login_consent"> I agree with the <a href="https://myknot-pubggaming.online/public/privacy.html"> Privacy Policy</a> and <a href="https://myknot-pubggaming.online/public/terms.html">Terms of Service</a> of MyKnot Gaming Services </string>
    <string name="partner_with_us_and_host_your_own_custom_games_with_least_worries">Partner with us and host your own custom games with least worries</string>
    <string name="yearly_pack_12_months">Yearly pack (12 months)</string>
    <string name="submit_for_review">Submit for review</string>
    <string name="weekly_pack_7_days">Weekly pack (7 days)</string>
    <string name="monthly_pack_28_days">Monthly pack (28 days)</string>
    <string name="choose_your_pack">Choose your pack</string>
    <string name="reason_of_use">Reason of use</string>
    <string name="mobile_no">Mobile No.</string>
    <string name="e_mail">E-mail</string>
    <string name="app_logo">App Logo</string>
    <string name="half_yearly_pack_6_months">Half-yearly pack (6 months)</string>
    <string name="name">Name</string>
    <string name="i_want_to_join_as_a_host">- i want to host my own match</string>
    <string name="i_don_t_have_an_account">- I don\'t have an Account</string>
    <string name="i_forgot_my_password">- i forgot my password</string>


    <string name="title_activity_welcome">Home Screen</string>

    <string name="skip">SKIP</string>
    <string name="start">GOT IT</string>

    <string name="slide_1_title">Hello User!</string>
    <string name="slide_1_desc">Welcome to the easiest way to register for a custom game of your favourite BATTLE ROYALE !</string>

    <string name="play_again_desc">To see the welcome slider again, goto Settings -> apps -> welcome slider -> clear data</string>
    <string name="play_again">Play Again</string>
    <string name="completed">Completed</string>
    <string name="upcoming">Upcoming</string>
    <string name="upcoming_fragment">Upcoming Fragment</string>
    <string name="completed_fragment">Completed fragment</string>
    <string name="no_upcoming_matches">No Upcoming Matches</string>
</resources>
