<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:gravity="center"
    android:padding="16dp"
    tools:context=".Admin.AdminLogin"
    android:background="@color/colorPrimary">

    <ProgressBar
        android:id="@+id/login_admin_progressBar"
        android:visibility="gone"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="10dp"/>
    <TextView
        android:id="@+id/status"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/signed_out"
        android:textColor="@android:color/white"
        android:textSize="14sp"
        android:visibility="gone"
        android:layout_marginBottom="10dp"/>

    <LinearLayout
        android:orientation="vertical"
        android:id="@+id/email_login_form"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <AutoCompleteTextView
            android:id="@+id/login_admin_email"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:backgroundTint="@color/colorPrimaryLight"
            android:hint="@string/admin_id"
            android:inputType="textEmailAddress"
            android:maxLines="1"
            android:outlineAmbientShadowColor="@color/colorPrimaryLight"
            android:textColor="@color/colorTextPrimary"
            android:textColorHint="@color/colorTextSecondary"
            android:textSize="20sp"
            tools:targetApi="p" />
        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            >
        <EditText
            android:id="@+id/login_admin_password"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="5dp"
            android:backgroundTint="@color/colorPrimaryLight"
            android:hint="@string/password"
            android:inputType="textPassword"
            android:maxLines="1"
            android:outlineAmbientShadowColor="@color/colorPrimaryLight"
            android:textColor="@color/colorTextPrimary"
            android:textColorHint="@color/colorTextSecondary"
            android:textSize="20sp"
            android:autofillHints="@string/password"
            tools:targetApi="p" />
            <ImageView
                android:id="@+id/admin_pwd_img"
                android:layout_width="20dp"
                android:layout_height="20dp"
                android:layout_centerVertical="true"
                android:onClick="showHidePass"
                android:layout_marginEnd="10dp"
                android:layout_alignParentEnd="true"
                android:src="@drawable/ic_baseline_lock_36"
                />
        </RelativeLayout>
        <Button
            android:id="@+id/btn_admin_login"
            android:text="@string/login"
            android:textColor="@color/colorPrimary"
            android:background="@color/colorPrimaryLight"
            android:layout_marginTop="16dp"
            android:textSize="16sp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" />

        <TextView
            android:text="@string/or"
            android:textStyle="bold"
            android:textSize="18sp"
            android:gravity="center_horizontal"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textColor="@color/colorTextPrimary"
            />

        <Button
            android:id="@+id/btn_create_admin_account"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@color/colorPrimaryLight"
            android:text="@string/create_account"
            android:textColor="@color/colorPrimary"
            android:textSize="16sp" />

    </LinearLayout>
</LinearLayout>