<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:gravity="center_horizontal"
    android:padding="16dp"
    tools:context=".Login.LogIn">
    <ImageView
        android:id="@+id/iv1"
        android:layout_width="match_parent"
        android:layout_height="150dp"
        android:src="@drawable/myknot_gaming_logo"
        />
    <LinearLayout
        android:id="@+id/acct_login_form"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:layout_below="@id/iv1"
        android:gravity="center"
        >

    <ProgressBar
        android:id="@+id/login_progressBar"
        android:visibility="gone"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        />

        <AutoCompleteTextView
            android:id="@+id/login_email"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:backgroundTint="@color/colorPrimaryLight"
            android:hint="@string/email"
            android:inputType="textEmailAddress"
            android:maxLines="1"
            android:layout_marginTop="20dp"
            android:outlineAmbientShadowColor="@color/colorPrimaryLight"
            android:textColor="@color/colorTextPrimary"
            android:textColorHint="@color/colorTextSecondary"
            android:textSize="20sp" />

        <EditText
            android:id="@+id/login_password"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:backgroundTint="@color/colorPrimaryLight"
            android:hint="@string/password"
            android:inputType="textPassword"
            android:maxLines="1"
            android:outlineAmbientShadowColor="@color/colorPrimaryLight"
            android:textColor="@color/colorTextPrimary"
            android:textColorHint="@color/colorTextSecondary"
            android:textSize="20sp"
            android:autofillHints="@string/password" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_gravity="center_vertical">
            <CheckBox
                android:id="@+id/login_check"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"/>
            <TextView
                android:id="@+id/login_consent"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:text="@string/login_consent"/>
        </LinearLayout>
        <Button
            android:id="@+id/btn_login"
            android:text="@string/login"
            android:textColor="@color/colorPrimary"
            android:background="@color/colorTextSecondary"
            android:layout_marginTop="20dp"
            android:textSize="16sp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:clickable="false"/>

        <TextView
            android:text="@string/or"
            android:textStyle="bold"
            android:textSize="16sp"
            android:gravity="center_horizontal"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textColor="@color/colorTextPrimary"
            />

        <Button
            android:id="@+id/btn_create_account"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@color/colorPrimaryLight"
            android:text="@string/create_account"
            android:textColor="@color/colorPrimary"
            android:textSize="16sp" />

        <TextView
            android:id="@+id/reset_link"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textColor="@color/colorPrimaryLight"
            android:textAlignment="center"
            android:text="@string/forgot_password"
            android:layout_marginTop="30dp"
            android:textSize="16sp"
            />
        <TextView
        android:id="@+id/host_link"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textColor="@color/colorPrimaryLight"
        android:textAlignment="center"
        android:text="@string/join_as_a_host"
        android:layout_marginTop="20dp"
        android:textSize="18sp"
        />


</LinearLayout>
</RelativeLayout>