<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:gravity="center_horizontal"
    android:orientation="vertical"
    android:padding="16dp"
    tools:context=".Login.SignUp">

    <ImageView
        android:id="@+id/iv1"
        android:layout_width="match_parent"
        android:layout_height="200dp"
        android:src="@drawable/myknot_gaming_logo"
        />
    <LinearLayout
        android:id="@+id/acct_signup_form"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:layout_below="@id/iv1"
        android:gravity="center"
        >
        <ProgressBar
            android:id="@+id/signup_progressBar"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:visibility="gone"/>

        <EditText
            android:id="@+id/signup_username"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/username"
            android:inputType="textPersonName"
            android:layout_marginTop="20dp"
            android:outlineAmbientShadowColor="@color/colorPrimaryLight"
            android:textColor="@color/colorTextPrimary"
            android:textColorHint="@color/colorTextSecondary"
            android:backgroundTint="@color/colorPrimaryLight"
            android:maxLines="1"
            android:autofillHints="@string/username" />

        <AutoCompleteTextView
            android:id="@+id/signup_email"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/email"
            android:inputType="textEmailAddress"
            android:outlineAmbientShadowColor="@color/colorPrimaryLight"
            android:textColor="@color/colorTextPrimary"
            android:textColorHint="@color/colorTextSecondary"
            android:backgroundTint="@color/colorPrimaryLight"
            android:maxLines="1" />

        <EditText
            android:id="@+id/signup_password"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/password"
            android:inputType="textPassword"
            android:outlineAmbientShadowColor="@color/colorPrimaryLight"
            android:textColor="@color/colorTextPrimary"
            android:textColorHint="@color/colorTextSecondary"
            android:backgroundTint="@color/colorPrimaryLight"
            android:maxLines="1"
            android:autofillHints="@string/password" />
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_marginBottom="20dp"
            android:layout_gravity="center_vertical">
            <CheckBox
                android:id="@+id/signin_check"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"/>
            <TextView
                android:id="@+id/signin_consent"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:text="@string/login_consent"/>
        </LinearLayout>

        <Button
            android:id="@+id/btn_signup"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/create_account"
            android:textColor="@color/colorPrimary"
            android:background="@color/colorTextSecondary"
            android:textSize="16sp" />


    </LinearLayout>

</RelativeLayout>