<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:orientation="vertical" android:layout_width="match_parent"
    android:layout_height="match_parent">

    <androidx.cardview.widget.CardView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:cardCornerRadius="15dp"
        >

        <RelativeLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:padding="25dp"
            >

            <TextView
                android:id="@+id/tv_alert"
                android:layout_alignParentTop="true"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/are_you_sure"
                android:textAlignment="center"
                android:textColor="@color/colorPrimaryLight"
                android:textSize="20sp"
                android:textStyle="bold" />
            <TextView
                android:id="@+id/tv_alert2"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="This action can not be reverted"
                android:textAlignment="center"
                android:layout_below="@id/tv_alert"
                android:textSize="14sp"/>


            <Button
                android:id="@+id/btn_no"
                android:layout_width="70dp"
                android:layout_height="35dp"
                android:layout_below="@+id/tv_alert2"
                android:layout_alignEnd="@+id/tv_alert"
                android:layout_marginTop="35dp"
                android:layout_marginEnd="15dp"
                android:background="@color/colorAccent"
                android:text="@string/no"
                android:textColor="@color/colorPrimary"/>

            <Button
                android:id="@+id/btn_yes"
                android:layout_width="70dp"
                android:layout_height="35dp"
                android:layout_below="@+id/tv_alert2"
                android:layout_alignStart="@+id/tv_alert"
                android:layout_marginTop="35dp"
                android:layout_marginStart="15dp"
                android:background="@color/colorAccent"
                android:text="@string/yes"
                android:textColor="@color/colorPrimary"/>

        </RelativeLayout>
    </androidx.cardview.widget.CardView>
</androidx.constraintlayout.widget.ConstraintLayout>